@@ -386,6 +386,12 @@ HTTPConnection Objects
 
    .. versionadded:: 2.7
 
+.. method:: HTTPConnection.set_tunnel(host, port=None)
+
+   Set the host and the port for HTTP Connect Tunnelling. Normally used when it
+   is required to a HTTPS Connection through a proxy server.
+
+   .. versionadded:: 3.1
 
 .. method:: HTTPConnection.connect()
 
